# ML_Timeseries

./: .gitignore  pyproject.toml
src/: data_analysis.ipynb  lstm.py  models.ipynb  models_old.ipynb  series copy.ipynb  series.ipynb
