[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch>=7.2.0",
    "deep-kan>=0.0.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "tsfel>=0.1.9",
    "tsfresh>=0.21.0",
    "xgboost>=3.0.1",
]
